--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ bevy = "0.11"
 rand = "0.8.5"
 smooth-bevy-cameras = "0.9"
 bevy_rapier3d = {version = "0.22", features = ["simd-stable", "debug-render-3d" ] }
+bevy_mod_picking = "0.15"
 
 # Enable max optimizations for dependencies, but not for our code:
 [profile.dev.package."*"]
